# citygml

./: pyproject.toml
src/citygml/: __init__.py  convert_elevate.py
