[project]
name = "citygml"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "xmltodict>=0.13.0",
    "pyproj>=3.6.1",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
